--- a/doc/man1/openssl-verify.pod.in
+++ b/doc/man1/openssl-verify.pod.in
@@ -78,8 +78,8 @@ current system time. I<timestamp> is the number of seconds since
 
 =item B<-check_ss_sig>
 
-Verify the signature on the last (trusted) certificate in a chain,
-which typically is a self-signed root CA certificate.
+Verify the signature on the last certificate in a chain,
+which typically is a trusted self-signed root CA certificate.
 This check is disabled by default because it does not add any security.
 
 =item B<-CRLfile> I<file>
@@ -150,8 +150,8 @@ a verification time, the check is not suppressed.
 =item B<-partial_chain>
 
 Allow verification to succeed even if a I<complete> chain cannot be built to a
-self-signed trust anchor, provided it is possible to construct a chain to any
-trusted certificate (which may be an intermediate or self-issued certificate).
+self-signed trust anchor, provided it is possible to construct a chain to a
+trusted certificate (which may be of an intermediate CA or a self-issued cert).
 
 =item B<-policy> I<arg>
 
@@ -413,10 +413,10 @@ Unspecified error; should not happen.
 
 =item B<X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT>
 
-The issuer certificate of a looked up certificate could not be found.
+The issuer certificate of a looked-up certificate could not be found.
 This normally means the list of trusted certificates is not complete.
 To enable using trusted self-issued but not self-signed certificates
-the B<-partial_chain> option may be set.
+the B<-partial_chain> option may be used.
 
 =item B<X509_V_ERR_UNABLE_TO_GET_CRL>
 
@@ -492,7 +492,7 @@ be found in the list of trusted certificates.
 =item B<X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN>
 
 The certificate chain could be built up using the untrusted certificates
-but the self-signed root could not be found trusted locally.
+but the self-signed root could not be found in the trust store.
 
 =item B<X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT_LOCALLY>
 
